--- a/conta-comigo/public/index.html
+++ b/conta-comigo/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="logomarcafb.png"/>
     <title>Conta comigo</title>
   </head>
   <body>
